[gd_scene load_steps=9 format=2]

[ext_resource path="res://MainWorld/geyseranimation.png" type="Texture" id=1]
[ext_resource path="res://MainWorld/Geyser.gd" type="Script" id=2]
[ext_resource path="res://MainWorld/CloudSceneChange.gd" type="Script" id=3]

[sub_resource type="Animation" id=9]
resource_name = "Geyser"
tracks/0/type = "value"
tracks/0/path = NodePath("Geyseranimation:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Geyseranimation/StaticBody2D/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 25 ), Vector2( 0, 10 ), Vector2( -1, -4 ), Vector2( 0, -29 ), Vector2( 0, -100 ), Vector2( 0, -220 ), Vector2( 0, -330 ), Vector2( 0, -5 ), Vector2( 0, 9 ), Vector2( 0, 26 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Geyseranimation/StaticBody2D/CollisionShape2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Geyseranimation/StaticBody2D/CollisionShape2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 2 ), Vector2( 1, 3 ), Vector2( 1, 7 ), Vector2( 1, 7 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Geyseranimation:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Geyseranimation/StaticBody2D/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 21 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Geyseranimation/StaticBody2D/CollisionShape2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Geyseranimation/StaticBody2D/CollisionShape2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 5.6126, 11 )

[sub_resource type="CircleShape2D" id=12]

[sub_resource type="CircleShape2D" id=13]
radius = 41.1947

[node name="Geyseranimation" type="Sprite"]
position = Vector2( 266, 144 )
texture = ExtResource( 1 )
hframes = 4

[node name="GeyserAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
playback_speed = 0.75
anims/Geyser = SubResource( 9 )
anims/RESET = SubResource( 10 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 0, 10 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 21 )
rotation = 1.5708
shape = SubResource( 11 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 0, -4 )
polygon = PoolVector2Array( -24, 26, -11, 19, 11, 19, 24, 26 )

[node name="GeyserLaunch" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GeyserLaunch"]
position = Vector2( 0, 14 )
shape = SubResource( 12 )

[node name="SceneChange" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SceneChange"]
position = Vector2( 0, -350 )
shape = SubResource( 13 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 13.0
margin_top = 13.0
margin_right = 124.0
margin_bottom = 27.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Press Enter to Fly"

[connection signal="body_entered" from="GeyserLaunch" to="GeyserLaunch" method="_on_GeyserLaunch_body_entered"]
[connection signal="body_exited" from="GeyserLaunch" to="GeyserLaunch" method="_on_GeyserLaunch_body_exited"]
[connection signal="body_entered" from="SceneChange" to="SceneChange" method="_on_SceneChange_body_entered"]
[connection signal="body_exited" from="SceneChange" to="SceneChange" method="_on_SceneChange_body_exited"]
